<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="navigation_connections_label">Connections</string>
    <string name="navigation_developers_label">Developers</string>
    <string name="navigation_settings_label">Settings</string>
    <string name="navigation_account_label">Account</string>
    <string name="app_title" translatable="false">3DR Services</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="warning_arm_thr_below_fs">Arm: Throttle below failsafe</string>
    <string name="uploader_success_message">Upload successful! Select to view…</string>
    <string name="uploader_fail_retry_message">Will try again later</string>
    <string name="uploader_notification_title">Droneshare upload</string>
    <string name="tlog_selector_label">Telemetry Logs File Selector</string>
    <string name="label_tlog_title">Telemetry Log Files</string>

    <string name="pref_mavlink_rates">Stream Rates</string>
    <string name="pref_mavlink_rates_summary">Rate at which flight data should be received from the drone (in Hz)</string>
    <string name="pref_mavlink_stream_rate_ext_stat">Waypoints, GPS raw, fence data, current waypoint, etc</string>
    <string name="pref_mavlink_stream_rate_extra1">Attitude</string>
    <string name="pref_mavlink_stream_rate_extra2">VFR_Hud data</string>
    <string name="pref_mavlink_stream_rate_extra3">AHRS, Hardware Status, Wind</string>
    <string name="pref_mavlink_stream_rate_position">Position data</string>
    <string name="pref_mavlink_stream_rate_RC_override">RC Override</string>
    <string name="pref_mavlink_stream_rate_rc_channels">RC Channel Data</string>
    <string name="pref_mavlink_stream_rate_raw_sensors">Raw Sensors</string>
    <string name="pref_mavlink_stream_rate_raw_controller">Raw Controller</string>

    <string name="app_connections_default_message">NO ACTIVE APPS</string>

    <string name="label_learn_more">Learn more</string>
    <string name="label_action_button_install">Install</string>
    <string name="label_action_button_open">Open</string>
    <string name="label_view_category_active">Active</string>
    <string name="label_view_category_recommended">Recommended</string>
    <string name="label_view_category_attitude">GCS Attitude</string>


    <string name="accel_y_string">Accel Y:</string>
    <string name="accel_x_string">Accel X:</string>
    <string name="accel_z_string">Accel Z:</string>
    <string name="gyro_y_string">Gyro Y:</string>
    <string name="gyro_x_string">Gyro X:</string>
    <string name="gyro_z_string">Gyro Z:</string>
    <string name="euler_y_string">Pitch:</string>
    <string name="euler_x_string">Yaw:</string>
    <string name="euler_z_string">Roll:</string>
    <string name="rv_string">Rot V:</string>
    <string name="reset_rv">Lock</string>


</resources>
